tests/snapshots/examples_fixtures/type_system__failing__75_hm_if_non_bool_condition_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with Bool.

  --> examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx:2:5
  |
2 |     if 1 {
  |     ^^^^^^
3 |         10
  | ^^^^^^^^^^
4 |     } else {
  | ^^^^^^^^^^^^
5 |         20
  | ^^^^^^^^^^
6 |     }
  | ^^^^^


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Bool with Int.

  --> examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx:2:8
  |
2 |     if 1 {
  |        ^
  |        - expected Bool, found Int
  |        - if condition is known at compile time

Help:
  use a Bool expression, or make the condition/guard explicitly boolean

Found 2 errors.
== stdout ==
<not executed>
